<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="volumes"
        app:title="@string/volumes" />

    <EditTextPreference
        app:key="silentMode"
        app:title="@string/silent_mode"
        app:summary="Off" />


    <PreferenceCategory app:title="@string/ringtone_header">

        <EditTextPreference
            app:key="ringtone"
            app:title="@string/ringtone"
            app:summary="Silent" />

        <EditTextPreference
            app:key="default_notification"
            app:title="@string/default_notification"
            app:summary="Silent" />

        <SwitchPreferenceCompat
            app:key="vibrate"
            app:title="@string/vibrate" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/system_header">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="dial_pad"
            app:title="@string/dial_pad" />
    </PreferenceCategory>

</PreferenceScreen>